// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly When auth has been fetched and is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="nav-wrapper"
>
        <Link
                className="brand-logo left"
                replace={false}
                to="/"
        >
                Home
        </Link>
        <ul
                className="right"
        >
                <li>
                        <Link
                                replace={false}
                                to="/recipes"
                        >
                                Recipes
                        </Link>
                </li>
                <li>
                        <a
                                href="/auth/google"
                        >
                                Login With Google
                        </a>
                </li>
        </ul>
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="brand-logo left"
            replace={false}
            to="/"
>
            Home
</Link>,
          <ul
            className="right"
>
            <li>
                        <Link
                                    replace={false}
                                    to="/recipes"
                        >
                                    Recipes
                        </Link>
            </li>
            <li>
                        <a
                                    href="/auth/google"
                        >
                                    Login With Google
                        </a>
            </li>
</ul>,
        ],
        "className": "nav-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Home",
            "className": "brand-logo left",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Home",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                                replace={false}
                                to="/recipes"
                >
                                Recipes
                </Link>
</li>,
              <li>
                <a
                                href="/auth/google"
                >
                                Login With Google
                </a>
</li>,
            ],
            "className": "right",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/recipes"
>
                  Recipes
</Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Recipes",
                  "replace": false,
                  "to": "/recipes",
                },
                "ref": null,
                "rendered": "Recipes",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/auth/google"
>
                  Login With Google
</a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Login With Google",
                  "href": "/auth/google",
                },
                "ref": null,
                "rendered": "Login With Google",
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="nav-wrapper"
>
          <Link
                    className="brand-logo left"
                    replace={false}
                    to="/"
          >
                    Home
          </Link>
          <ul
                    className="right"
          >
                    <li>
                              <Link
                                        replace={false}
                                        to="/recipes"
                              >
                                        Recipes
                              </Link>
                    </li>
                    <li>
                              <a
                                        href="/auth/google"
                              >
                                        Login With Google
                              </a>
                    </li>
          </ul>
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="brand-logo left"
              replace={false}
              to="/"
>
              Home
</Link>,
            <ul
              className="right"
>
              <li>
                            <Link
                                          replace={false}
                                          to="/recipes"
                            >
                                          Recipes
                            </Link>
              </li>
              <li>
                            <a
                                          href="/auth/google"
                            >
                                          Login With Google
                            </a>
              </li>
</ul>,
          ],
          "className": "nav-wrapper",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "className": "brand-logo left",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link
                                    replace={false}
                                    to="/recipes"
                  >
                                    Recipes
                  </Link>
</li>,
                <li>
                  <a
                                    href="/auth/google"
                  >
                                    Login With Google
                  </a>
</li>,
              ],
              "className": "right",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/recipes"
>
                    Recipes
</Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Recipes",
                    "replace": false,
                    "to": "/recipes",
                  },
                  "ref": null,
                  "rendered": "Recipes",
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="/auth/google"
>
                    Login With Google
</a>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Login With Google",
                    "href": "/auth/google",
                  },
                  "ref": null,
                  "rendered": "Login With Google",
                  "type": "a",
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Should render correctly When auth has been fetched and is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="nav-wrapper"
>
        <Link
                className="brand-logo left"
                replace={false}
                to="/dashboard"
        >
                Home
        </Link>
        <ul
                className="right"
        >
                <li>
                        <Link
                                replace={false}
                                to="/recipes"
                        >
                                Recipes
                        </Link>
                </li>
                <li>
                        <a
                                href="/auth/logout"
                        >
                                Logout
                        </a>
                </li>
        </ul>
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="brand-logo left"
            replace={false}
            to="/dashboard"
>
            Home
</Link>,
          <ul
            className="right"
>
            <li>
                        <Link
                                    replace={false}
                                    to="/recipes"
                        >
                                    Recipes
                        </Link>
            </li>
            <li>
                        <a
                                    href="/auth/logout"
                        >
                                    Logout
                        </a>
            </li>
</ul>,
        ],
        "className": "nav-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Home",
            "className": "brand-logo left",
            "replace": false,
            "to": "/dashboard",
          },
          "ref": null,
          "rendered": "Home",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                                replace={false}
                                to="/recipes"
                >
                                Recipes
                </Link>
</li>,
              <li>
                <a
                                href="/auth/logout"
                >
                                Logout
                </a>
</li>,
            ],
            "className": "right",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/recipes"
>
                  Recipes
</Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Recipes",
                  "replace": false,
                  "to": "/recipes",
                },
                "ref": null,
                "rendered": "Recipes",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/auth/logout"
>
                  Logout
</a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Logout",
                  "href": "/auth/logout",
                },
                "ref": null,
                "rendered": "Logout",
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="nav-wrapper"
>
          <Link
                    className="brand-logo left"
                    replace={false}
                    to="/dashboard"
          >
                    Home
          </Link>
          <ul
                    className="right"
          >
                    <li>
                              <Link
                                        replace={false}
                                        to="/recipes"
                              >
                                        Recipes
                              </Link>
                    </li>
                    <li>
                              <a
                                        href="/auth/logout"
                              >
                                        Logout
                              </a>
                    </li>
          </ul>
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="brand-logo left"
              replace={false}
              to="/dashboard"
>
              Home
</Link>,
            <ul
              className="right"
>
              <li>
                            <Link
                                          replace={false}
                                          to="/recipes"
                            >
                                          Recipes
                            </Link>
              </li>
              <li>
                            <a
                                          href="/auth/logout"
                            >
                                          Logout
                            </a>
              </li>
</ul>,
          ],
          "className": "nav-wrapper",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "className": "brand-logo left",
              "replace": false,
              "to": "/dashboard",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link
                                    replace={false}
                                    to="/recipes"
                  >
                                    Recipes
                  </Link>
</li>,
                <li>
                  <a
                                    href="/auth/logout"
                  >
                                    Logout
                  </a>
</li>,
              ],
              "className": "right",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/recipes"
>
                    Recipes
</Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Recipes",
                    "replace": false,
                    "to": "/recipes",
                  },
                  "ref": null,
                  "rendered": "Recipes",
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="/auth/logout"
>
                    Logout
</a>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Logout",
                    "href": "/auth/logout",
                  },
                  "ref": null,
                  "rendered": "Logout",
                  "type": "a",
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Should render correctly When auth has not been fetched 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={null}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="nav-wrapper"
>
        <Link
                className="brand-logo left"
                replace={false}
                to="/"
        >
                Home
        </Link>
        <ul
                className="right"
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="brand-logo left"
            replace={false}
            to="/"
>
            Home
</Link>,
          <ul
            className="right"
/>,
        ],
        "className": "nav-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Home",
            "className": "brand-logo left",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Home",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": null,
            "className": "right",
          },
          "ref": null,
          "rendered": null,
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="nav-wrapper"
>
          <Link
                    className="brand-logo left"
                    replace={false}
                    to="/"
          >
                    Home
          </Link>
          <ul
                    className="right"
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="brand-logo left"
              replace={false}
              to="/"
>
              Home
</Link>,
            <ul
              className="right"
/>,
          ],
          "className": "nav-wrapper",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "className": "brand-logo left",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
              "className": "right",
            },
            "ref": null,
            "rendered": null,
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
